benchmark-results/8/merge/cseq/concurrentwitness2test.2024-11-27_10-15-16.logfiles/SV-COMP23_unreach-call.cseq-mix020.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix020.opt.yml/mix020.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix020.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_eoezu3u1/tmp/tmpan4960z7.c
Compilation started
/tmp/BenchExec_run_eoezu3u1/tmp/tmpan4960z7.c: In function ‘P2’:
/tmp/BenchExec_run_eoezu3u1/tmp/tmpan4960z7.c:611:19: error: ‘FALSE’ undeclared (first use in this function)
  611 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_eoezu3u1/tmp/tmpan4960z7.c:611:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_eoezu3u1/tmp/tmpan4960z7.c: In function ‘P3’:
/tmp/BenchExec_run_eoezu3u1/tmp/tmpan4960z7.c:652:19: error: ‘FALSE’ undeclared (first use in this function)
  652 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_eoezu3u1/tmp/tmpan4960z7.c:653:19: error: ‘TRUE’ undeclared (first use in this function)
  653 |   weak$$choice2 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
